--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,8 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    roomVersion = '2.2.6'
+    archLifecycleVersion = '2.3.1'
+}
