--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AlarmManager">
         <activity
+            android:name=".startAlarmActivity.StartAlarmActivity"
+            android:parentActivityName=".mainActivity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=
+                    "com.example.alarmmanager.mainActivity.MainActivity" /></activity>
+        <activity
             android:name=".mainActivity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AlarmManager.NoActionBar">
